[project]
name = "ComfyUI-StereoVision"
description = "A ComfyUI node for producing stereoscopic and autostereogram (magic eye) images and videos."
version = "1.1.2"
license = {file = "LICENSE"}
dependencies = ["torch", "Pillow", "numpy", "tqdm", "numba", "opencv-python", "scipy"]

[project.urls]
Repository = "https://github.com/DrMWeigand/ComfyUI-StereoVision"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "drunreal"
DisplayName = "StereoVision"
Icon = "https://www.mws.biz/wp-content/uploads/2021/02/cropped-MWSoftwareFavicon-1-180x180.png"
